# simple_txtar

./: Cargo.toml  README.md
src/: lib.rs
